// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`composed prompt snapshots > addSpeakerNotes (single-slide) 1`] = `
{
  "system": "You are a SlideMD editor. Improve the provided markdown and return the result as a JSON object.

Output format:

\`\`\`json
{
  "slides": [
    { "layout": "header-content", "content": "@header\\n# Title\\n\\n@main\\n- Point 1\\n- Point 2" }
  ]
}
\`\`\`

Rules:

- Return only valid JSON. No explanations, markdown fences, or surrounding text.
- Every slide must have non-empty content.
- Use \`\\n\` for newlines inside the "content" string.
- Only use @area names that the chosen layout supports. Check the layout list below before assigning areas — each layout lists its exact allowed \`@area\` names. Using an area not listed for the chosen layout is an error.
- Put a blank line before and after every @area marker.
- Put a blank line before and after code blocks, lists, tables, and headers.
- Review and fix fenced code blocks, not just their formatting. Correct syntax errors, broken logic, and nonsensical or placeholder code. Restore proper indentation and line breaks in code collapsed to a single line, remove stray inline code markers (e.g. \`\` \`43\` \`\`) that don't belong in code, and add a language tag when the language is clear.
- The first heading in \`@header\` must be \`#\` (h1), not \`##\` or lower.
- Speaker notes go at the very end: \`<!-- notes: ... -->\`.
- Use \`::: text-block { ... }\` for styled or multi-column text. Never use raw \`<div style="...">\`. Attributes MUST be inside \`{ }\` braces. Example: \`::: text-block { column-count=2 markdown=true }\\n### Heading\\n- item\\n:::\`. Blank lines inside the directive are optional.
- Text block attribute syntax: \`key=value\` or \`key="value"\` (NOT \`key: value\`). Supported attributes: \`id\`, \`float=true\`, \`x\`, \`y\`, \`fontSize\`, \`align\` (left|center|right), \`opacity\`, \`z\`, \`rotate\`, \`column-count\`, \`markdown=true\`, \`bold=true\`, \`italic=true\`, \`underline=true\`, \`strikethrough=true\`. Do NOT use \`color\` or \`backgroundColor\` to change text or background colors. Freeform CSS (\`style\`, \`padding\`, \`margin\`, \`border-radius\`) is NOT supported — use the attributes above.
- To render markdown (headings, lists, bold) inside a text-block, set \`column-count=N\` (for multi-column flow) or \`markdown=true\` (for a single styled block). Without either, content is treated as plain escaped text.
- Preserve any existing \`::: text-block\` blocks exactly, including all attributes and inner text.
- Convert \`[Diagram: ...]\` to Mermaid only for true flowcharts or hierarchies; otherwise use bullet points.
- Handle \`<img>\` tags in the input: preserve them unless the prompt says to drop specific images. When repositioning an image, use \`style="position: relative; left: Npx; top: Npx; width: Npx;"\` on the \`<img>\` tag for custom placement.
- Only use an \`<img>\` \`src\` that actually exists in the input, the kept-image list, or a \`reuse:<path>\` directive. Do not invent URLs, search for images, or use placeholder \`src\` values.
- Use \`style="object-fit: contain;"\` on logos, diagrams, or screenshots that must not be cropped. Use \`object-fit: cover;\` for full-bleed photos that should fill their area (the app CSS already defaults to \`cover\` for media-span images).
- Use KaTeX syntax for math: \`$...$\` for inline math and \`$$...$$\` for display math. The app renders these with KaTeX. Do not write ASCII art equations or use \`<sup>\`/\`<sub>\` instead of proper KaTeX.

Allowed layouts and areas:
title-slide: @title, @footer
header-content: @header, @main, @footer
two-column: @header, @main, @media, @footer
media-span-right: @header, @main, @media, @footer
media-span-left: @header, @main, @media, @footer
left-heavy: @header, @main, @media, @footer
right-heavy: @header, @main, @media, @footer
three-column: @header, @main, @media, @secondary, @footer
focus: @header, @main, @footer
full-image: @main
",
  "user": "Add speaker notes to this single slide. Return the result as JSON.

What to do:

- Notes should expand on the slide's key points for a presenter.
- Include context, transitions, and talking points that a presenter would say aloud.
- Keep notes to 2-4 sentences.
- Do not change the slide's layout, areas, or visible content.
- Do not add or remove slides.
- Base notes only on facts already present in the slide. Do not invent data, examples, or claims.

Success criteria:

- Output is valid JSON with a \`slides\` array containing exactly one slide.
- The slide's visible content is unchanged.
- Notes are relevant to the slide's topic and useful for a presenter.

Input markdown:
layout: title-slide
background: #1a1a2e
theme: dark

@title

# AI for Presentations

@footer

Speaker Name
",
}
`;

exports[`composed prompt snapshots > batched fix with context slides 1`] = `
{
  "original": "layout: title-slide
background: #1a1a2e
theme: dark

@title

# AI for Presentations

@footer

Speaker Name

---

layout: two-column

@header

## Why SlideMD

@main

- Markdown-driven
- Offline-first
- Deterministic layout

@media

![diagram](images/chart.png)

---

layout: header-content

@header

## Roadmap

@main

\`\`\`js
const x = 1;
console.log(x);
\`\`\`

- Ship v1.0
- Add themes
- Export PDF
",
  "system": "You are a SlideMD editor. Improve the provided markdown and return the result as a JSON object.

Output format:

\`\`\`json
{
  "slides": [
    { "layout": "header-content", "content": "@header\\n# Title\\n\\n@main\\n- Point 1\\n- Point 2" }
  ]
}
\`\`\`

Rules:

- Return only valid JSON. No explanations, markdown fences, or surrounding text.
- Every slide must have non-empty content.
- Use \`\\n\` for newlines inside the "content" string.
- Only use @area names that the chosen layout supports. Check the layout list below before assigning areas — each layout lists its exact allowed \`@area\` names. Using an area not listed for the chosen layout is an error.
- Put a blank line before and after every @area marker.
- Put a blank line before and after code blocks, lists, tables, and headers.
- Review and fix fenced code blocks, not just their formatting. Correct syntax errors, broken logic, and nonsensical or placeholder code. Restore proper indentation and line breaks in code collapsed to a single line, remove stray inline code markers (e.g. \`\` \`43\` \`\`) that don't belong in code, and add a language tag when the language is clear.
- The first heading in \`@header\` must be \`#\` (h1), not \`##\` or lower.
- Speaker notes go at the very end: \`<!-- notes: ... -->\`.
- Use \`::: text-block { ... }\` for styled or multi-column text. Never use raw \`<div style="...">\`. Attributes MUST be inside \`{ }\` braces. Example: \`::: text-block { column-count=2 markdown=true }\\n### Heading\\n- item\\n:::\`. Blank lines inside the directive are optional.
- Text block attribute syntax: \`key=value\` or \`key="value"\` (NOT \`key: value\`). Supported attributes: \`id\`, \`float=true\`, \`x\`, \`y\`, \`fontSize\`, \`align\` (left|center|right), \`opacity\`, \`z\`, \`rotate\`, \`column-count\`, \`markdown=true\`, \`bold=true\`, \`italic=true\`, \`underline=true\`, \`strikethrough=true\`. Do NOT use \`color\` or \`backgroundColor\` to change text or background colors. Freeform CSS (\`style\`, \`padding\`, \`margin\`, \`border-radius\`) is NOT supported — use the attributes above.
- To render markdown (headings, lists, bold) inside a text-block, set \`column-count=N\` (for multi-column flow) or \`markdown=true\` (for a single styled block). Without either, content is treated as plain escaped text.
- Preserve any existing \`::: text-block\` blocks exactly, including all attributes and inner text.
- Convert \`[Diagram: ...]\` to Mermaid only for true flowcharts or hierarchies; otherwise use bullet points.
- Handle \`<img>\` tags in the input: preserve them unless the prompt says to drop specific images. When repositioning an image, use \`style="position: relative; left: Npx; top: Npx; width: Npx;"\` on the \`<img>\` tag for custom placement.
- Only use an \`<img>\` \`src\` that actually exists in the input, the kept-image list, or a \`reuse:<path>\` directive. Do not invent URLs, search for images, or use placeholder \`src\` values.
- Use \`style="object-fit: contain;"\` on logos, diagrams, or screenshots that must not be cropped. Use \`object-fit: cover;\` for full-bleed photos that should fill their area (the app CSS already defaults to \`cover\` for media-span images).
- Use KaTeX syntax for math: \`$...$\` for inline math and \`$$...$$\` for display math. The app renders these with KaTeX. Do not write ASCII art equations or use \`<sup>\`/\`<sub>\` instead of proper KaTeX.

Allowed layouts and areas:
title-slide: @title, @footer
header-content: @header, @main, @footer
two-column: @header, @main, @media, @footer
media-span-right: @header, @main, @media, @footer
media-span-left: @header, @main, @media, @footer
left-heavy: @header, @main, @media, @footer
right-heavy: @header, @main, @media, @footer
three-column: @header, @main, @media, @secondary, @footer
focus: @header, @main, @footer
full-image: @main
",
  "user": "Fix the provided SlideMD markdown. Return the result as JSON.

What to fix:

- Rejoin split code lines and add language tags where the language is clear.
- Restore blank lines between functions, classes, and logical sections.
- Remove bold wrapping from headings.
- Fix broken links, lists, and tables.
- Remove duplicate blank lines and trailing whitespace.
- Fix mismatched layouts: downgrade \`media-span-left\`, \`media-span-right\`, or \`two-column\` when there is no image or an empty second column.
- Make sure the headers for slides are correctly set and the heading level is consistent as much as possible.
- Do not add or remove slides.

Success criteria:

- Output is valid JSON with a \`slides\` array.
- Each slide has a layout and non-empty content.
- Speaker notes are preserved and placed at the end of the slide content.
- No raw \`<div style="...">\` blocks (unless it already exists); use \`::: text-block { ... }\` for custom styling. Text-block attributes use \`key=value\` syntax (not \`key: value\`); supported attributes are \`id\`, \`float\`, \`x\`, \`y\`, \`fontSize\`, \`align\`, \`opacity\`, \`z\`, \`rotate\`, \`column-count\`, \`markdown\`, \`bold\`, \`italic\`, \`underline\`, \`strikethrough\`. Do NOT use \`color\` or \`backgroundColor\` to change text or background colors. Freeform CSS (\`style\`, \`padding\`, \`margin\`) is not supported.

Input markdown:
<!-- CONTEXT SLIDE — DO NOT INCLUDE IN OUTPUT (index 0) -->
layout: title-slide

@title

# AI for Presentations

@footer

Speaker Name

---

<!-- SLIDE INDEX 1 (return this) -->
layout: two-column

@header

## Why SlideMD

@main

- Markdown-driven
- Offline-first
- Deterministic layout

@media

![diagram](images/chart.png)

---

<!-- CONTEXT SLIDE — DO NOT INCLUDE IN OUTPUT (index 2) -->
layout: header-content

@header

## Roadmap

@main

\`\`\`js
const x = 1;
console.log(x);
\`\`\`

- Ship v1.0
- Add themes
- Export PDF


CRITICAL: You must return EXACTLY 1 slide(s) — one for each "SLIDE INDEX" comment in the input (indices 1 through 1). Do NOT return context slides. Each output slide must include the same "SLIDE INDEX" comment as its first line.",
}
`;

exports[`composed prompt snapshots > batched generate with deck summary 1`] = `
{
  "original": "layout: title-slide
background: #1a1a2e
theme: dark

@title

# AI for Presentations

@footer

Speaker Name

---

layout: two-column

@header

## Why SlideMD

@main

- Markdown-driven
- Offline-first
- Deterministic layout

@media

![diagram](images/chart.png)

---

layout: header-content

@header

## Roadmap

@main

\`\`\`js
const x = 1;
console.log(x);
\`\`\`

- Ship v1.0
- Add themes
- Export PDF
",
  "system": "You are a SlideMD editor. Improve the provided markdown and return the result as a JSON object.

Output format:

\`\`\`json
{
  "slides": [
    { "layout": "header-content", "content": "@header\\n# Title\\n\\n@main\\n- Point 1\\n- Point 2" }
  ]
}
\`\`\`

Rules:

- Return only valid JSON. No explanations, markdown fences, or surrounding text.
- Every slide must have non-empty content.
- Use \`\\n\` for newlines inside the "content" string.
- Only use @area names that the chosen layout supports. Check the layout list below before assigning areas — each layout lists its exact allowed \`@area\` names. Using an area not listed for the chosen layout is an error.
- Put a blank line before and after every @area marker.
- Put a blank line before and after code blocks, lists, tables, and headers.
- Review and fix fenced code blocks, not just their formatting. Correct syntax errors, broken logic, and nonsensical or placeholder code. Restore proper indentation and line breaks in code collapsed to a single line, remove stray inline code markers (e.g. \`\` \`43\` \`\`) that don't belong in code, and add a language tag when the language is clear.
- The first heading in \`@header\` must be \`#\` (h1), not \`##\` or lower.
- Speaker notes go at the very end: \`<!-- notes: ... -->\`.
- Use \`::: text-block { ... }\` for styled or multi-column text. Never use raw \`<div style="...">\`. Attributes MUST be inside \`{ }\` braces. Example: \`::: text-block { column-count=2 markdown=true }\\n### Heading\\n- item\\n:::\`. Blank lines inside the directive are optional.
- Text block attribute syntax: \`key=value\` or \`key="value"\` (NOT \`key: value\`). Supported attributes: \`id\`, \`float=true\`, \`x\`, \`y\`, \`fontSize\`, \`align\` (left|center|right), \`opacity\`, \`z\`, \`rotate\`, \`column-count\`, \`markdown=true\`, \`bold=true\`, \`italic=true\`, \`underline=true\`, \`strikethrough=true\`. Do NOT use \`color\` or \`backgroundColor\` to change text or background colors. Freeform CSS (\`style\`, \`padding\`, \`margin\`, \`border-radius\`) is NOT supported — use the attributes above.
- To render markdown (headings, lists, bold) inside a text-block, set \`column-count=N\` (for multi-column flow) or \`markdown=true\` (for a single styled block). Without either, content is treated as plain escaped text.
- Preserve any existing \`::: text-block\` blocks exactly, including all attributes and inner text.
- Convert \`[Diagram: ...]\` to Mermaid only for true flowcharts or hierarchies; otherwise use bullet points.
- Handle \`<img>\` tags in the input: preserve them unless the prompt says to drop specific images. When repositioning an image, use \`style="position: relative; left: Npx; top: Npx; width: Npx;"\` on the \`<img>\` tag for custom placement.
- Only use an \`<img>\` \`src\` that actually exists in the input, the kept-image list, or a \`reuse:<path>\` directive. Do not invent URLs, search for images, or use placeholder \`src\` values.
- Use \`style="object-fit: contain;"\` on logos, diagrams, or screenshots that must not be cropped. Use \`object-fit: cover;\` for full-bleed photos that should fill their area (the app CSS already defaults to \`cover\` for media-span images).
- Use KaTeX syntax for math: \`$...$\` for inline math and \`$$...$$\` for display math. The app renders these with KaTeX. Do not write ASCII art equations or use \`<sup>\`/\`<sub>\` instead of proper KaTeX.

Allowed layouts and areas:
title-slide: @title, @footer
header-content: @header, @main, @footer
two-column: @header, @main, @media, @footer
media-span-right: @header, @main, @media, @footer
media-span-left: @header, @main, @media, @footer
left-heavy: @header, @main, @media, @footer
right-heavy: @header, @main, @media, @footer
three-column: @header, @main, @media, @secondary, @footer
focus: @header, @main, @footer
full-image: @main
",
  "user": "Deck Context:
Deck: 3 slides.
Outline:
1. [title-slide] AI for Presentations

Input markdown:
Refine this SlideMD presentation. Return the result as JSON.

Content strategy:

- Improve wording: make headers concise, tighten bullet points, replace vague text with specific statements.
- Pick the best layout for each slide's content — don't default to header-content if a two-column, focus, or table layout would be clearer.
- Vary layouts across the deck. If three consecutive slides use the same layout, reconsider at least one. Use \`focus\` for a single key takeaway, \`two-column\` for balanced code+explanation, \`media-span-left\`/\`media-span-right\` ONLY when the \`@media\` area contains an image or Mermaid diagram, \`full-image\` for atmospheric/visual slides, and \`title-slide\` for the deck's opening slide.
- Match the layout to the content. Use \`focus\` only for a single key takeaway; \`focus\` has limited height, so use \`header-content\` or \`two-column\` for dense tables, code, and Mermaid diagrams. Use \`two-column\` only when both columns have real content. Use \`media-span-left\` or \`media-span-right\` only when the \`@media\` area is an image or a Mermaid diagram.
- If the first slide's brief says "Title slide", use \`layout: title-slide\` with the topic as \`@title\` and the identity text as \`@footer\`. Do not add body content to a title slide. Keep the footer to one or two short lines of identifying information (e.g. course code and term).
- Use tables for 2-3 item comparisons.
- Use two-column for diagrams, code, or dense content.
- Do not repeat slide titles. Every slide title must be unique and clearly distinguishable from other slides in the deck.
- Do not include internal chapter labels, step numbers, stage markers, or brief metadata in slide text. Slide titles and body text should be clean, human-facing content. Remove markers like \`chapter 03 / ...\`, \`> $ section / step N\`, \`>>> ...\`, or similar leaked brief tokens.
- Add speaker notes where helpful: \`<!-- notes: ... -->\`.
- Drop images that are low quality, redundant, or don't add value to the slide.
- If the input appears to be from a PPTX import (mismatched layouts, images in wrong areas, verbose text boxes), fix the layout to match the actual content, reposition images to where they make sense, and tighten the text.
- If a slide has a \`<!-- brief: ... -->\` comment, follow that brief. A brief saying "merge" means combine the following slides into one output slide.
- The brief may include \`| image: <query>\` at the end. Only honor the query if it is a \`reuse:<path>\` directive (e.g. \`reuse:images/team-photo.jpg\`). In that case, insert \`<img src="path">\` on that slide using the exact path. If the query is anything other than \`reuse:<path>\` (a search term, a description, etc.), ignore it — do not insert an image.
- If the brief intent text contains "Footer: <text>", place that text verbatim in the slide's \`@footer\` area (not in \`@main\`). This is used to preserve deck identity (course code, week number, etc.) on the first slide.
- Follow the mode and visual-identity instructions that follow this prompt.

Visual styling:

- Pick ONE coherent visual theme for the whole deck: a light palette with dark text, a dark palette with light text, or a high-contrast accent palette. Use it consistently across slides — do not make each slide look random.
- Use a small set of accent colors repeatedly (e.g., one primary highlight color, one secondary). Keep backgrounds within the same family and vary them subtly for rhythm.

- Use the app's default neutral styling. Do not output \`background:\`, \`theme:\`, \`style="..."\`, \`color\`, \`backgroundColor\`, or \`::: text-block { color="..." backgroundColor="..." }\`. Use bold, headings, and layout to create emphasis, not color.
- Place content images using \`<img>\` tags with appropriate \`position: relative\` + \`left\`/\`top\`/\`width\` for custom placement when the layout allows it.
- For full-bleed visuals, use \`layout: full-image\` with the image as the \`@main\` content.

Diagrams:

- Use Mermaid for ALL diagrams (flowcharts, sequence diagrams, class diagrams, etc.). Mermaid syntax: \`​\`\`\`mermaid\` code blocks.
- Do NOT use ASCII art, box-drawing characters, or text-based diagrams (e.g. \`─┐\`, \`├──>\`, \`──>\`). These render poorly and are not interactive.
- If a concept needs a visual, use Mermaid or a table instead.
- Diagrams should be substantive, not trivial. A two-box flowchart is not a diagram — it is a label. Show real relationships: multiple paths, branches, before/after states, data transformations, or layered structures. Aim for 5+ nodes in most diagrams.
- Do not draw a linear sequence of 4+ boxes connected by arrows. That is a bullet list, not a diagram. Only use a \`flowchart\` when there are branches, decisions, loops, or parallel paths. Do not use a flowchart to explain or define a concept; use a numbered list, a table, a \`classDiagram\`, or a \`stateDiagram-v2\` instead.
- Vary diagram types: use \`flowchart\` for data flow and decisions, \`sequenceDiagram\` for interactions between components, \`classDiagram\` for data models, and \`stateDiagram-v2\` for state transitions. Don't use \`flowchart LR\` for everything.
- Diagrams should illustrate the concept, not restate the title. A diagram showing \`A --> B\` with the same text as the slide title adds nothing. Show the internal structure, the decision points, or the transformation steps.

Content depth:

- Each slide should have enough content to stand on its own — not just a title and one sentence. Include concrete examples, code, comparisons, or visual structure that makes the point clear.
- Vary content structure across slides. Don't make every slide a title + code block + one-line explanation. Mix in: tables, side-by-side comparisons, annotated code, step-by-step traces, prediction questions, before/after contrasts, analogies, historical remarks, and visual metaphors.
- Code blocks should be realistic and illustrative, not trivially short. Show enough context (variables, types, output) that the reader can trace what happens. Include expected output as a separate \`text\` block when helpful.
- All code must be syntactically valid in its language and use consistent, meaningful identifiers. Do not include placeholder tokens, foreign words, or malformed syntax unless the slide explicitly labels it as a deliberate mistake and explains the fix.
- Speaker notes should add teaching value — not just restate the slide. Include suggested questions to ask the audience, common misconceptions, or transitions to the next slide.

Slide density and overflow prevention:

- One main idea per slide. If a slide's content cannot fit comfortably, split it into two slides or move the detail to speaker notes. Do not try to pack every concept onto one slide.
- Respect these per-area line budgets for the standard layouts. A "line" counts as one paragraph, one bullet item, one table row, or one line of code:
  - \`title-slide\`: \`@title\` only (one or two short lines) and \`@footer\` only (one or two short lines). No \`@main\` content.
  - \`focus\`: \`@main\` should hold at most 4–5 lines. This layout uses a larger font, so be especially stingy — a headline plus a couple of supporting lines is plenty.
  - \`header-content\`: \`@header\` is one line; \`@main\` should hold about 10–14 lines total. That budget is consumed by any combination of paragraphs, bullets, table rows, and code lines.
  - \`two-column\`: \`@header\` is one line; each column (\`@main\` and \`@media\`) should hold about 6–10 lines and be roughly balanced — neither column should be more than twice as tall as the other.
  - \`media-span-left\` / \`media-span-right\`: \`@header\` is one line; \`@main\` should hold about 8–12 lines; \`@media\` holds one image or one Mermaid diagram.
  - \`full-image\`: \`@main\` is just the full-bleed image; keep any text to a short caption (≤2 lines) or omit it.
- Dense elements consume the budget quickly: a code block, a table, or a Mermaid diagram each count as roughly their number of rendered lines. Use them singly, not stacked. If a code example is longer than ~10 lines, trim it or split it across slides.
- Speaker notes are where detail lives: common misconceptions, step-by-step narration, extra examples, and transition scripts should go in \`<!-- notes: ... -->\`, not on the slide.

Success criteria:

- Every slide has an appropriate layout with valid area markers.
- No custom \`background:\`, \`theme:\`, \`color\`, or \`backgroundColor\` directives are emitted; the deck uses the app's default neutral styling.
- Headers use the correct hierarchy.
- All \`[Diagram:]\` markers are addressed with Mermaid.
- No ASCII art or text-based diagrams.
- Each slide's content fits its layout — no area exceeds the density caps above. Split or trim overflowing slides.
- The JSON is valid and parseable.

Input markdown:
@header

## Why SlideMD

@main

- Markdown-driven
- Offline-first
- Deterministic layout

@media

![diagram](images/chart.png)

---

@header

## Roadmap

@main

\`\`\`js
const x = 1;
console.log(x);
\`\`\`

- Ship v1.0
- Add themes
- Export PDF


Return exactly 2 slide(s) as JSON. Fix or organize these slides within the context of the full deck.",
}
`;

exports[`composed prompt snapshots > enhanceSlide (single-slide fix) 1`] = `
{
  "system": "You are a SlideMD editor. Improve the provided markdown and return the result as a JSON object.

Output format:

\`\`\`json
{
  "slides": [
    { "layout": "header-content", "content": "@header\\n# Title\\n\\n@main\\n- Point 1\\n- Point 2" }
  ]
}
\`\`\`

Rules:

- Return only valid JSON. No explanations, markdown fences, or surrounding text.
- Every slide must have non-empty content.
- Use \`\\n\` for newlines inside the "content" string.
- Only use @area names that the chosen layout supports. Check the layout list below before assigning areas — each layout lists its exact allowed \`@area\` names. Using an area not listed for the chosen layout is an error.
- Put a blank line before and after every @area marker.
- Put a blank line before and after code blocks, lists, tables, and headers.
- Review and fix fenced code blocks, not just their formatting. Correct syntax errors, broken logic, and nonsensical or placeholder code. Restore proper indentation and line breaks in code collapsed to a single line, remove stray inline code markers (e.g. \`\` \`43\` \`\`) that don't belong in code, and add a language tag when the language is clear.
- The first heading in \`@header\` must be \`#\` (h1), not \`##\` or lower.
- Speaker notes go at the very end: \`<!-- notes: ... -->\`.
- Use \`::: text-block { ... }\` for styled or multi-column text. Never use raw \`<div style="...">\`. Attributes MUST be inside \`{ }\` braces. Example: \`::: text-block { column-count=2 markdown=true }\\n### Heading\\n- item\\n:::\`. Blank lines inside the directive are optional.
- Text block attribute syntax: \`key=value\` or \`key="value"\` (NOT \`key: value\`). Supported attributes: \`id\`, \`float=true\`, \`x\`, \`y\`, \`fontSize\`, \`align\` (left|center|right), \`opacity\`, \`z\`, \`rotate\`, \`column-count\`, \`markdown=true\`, \`bold=true\`, \`italic=true\`, \`underline=true\`, \`strikethrough=true\`. Do NOT use \`color\` or \`backgroundColor\` to change text or background colors. Freeform CSS (\`style\`, \`padding\`, \`margin\`, \`border-radius\`) is NOT supported — use the attributes above.
- To render markdown (headings, lists, bold) inside a text-block, set \`column-count=N\` (for multi-column flow) or \`markdown=true\` (for a single styled block). Without either, content is treated as plain escaped text.
- Preserve any existing \`::: text-block\` blocks exactly, including all attributes and inner text.
- Convert \`[Diagram: ...]\` to Mermaid only for true flowcharts or hierarchies; otherwise use bullet points.
- Handle \`<img>\` tags in the input: preserve them unless the prompt says to drop specific images. When repositioning an image, use \`style="position: relative; left: Npx; top: Npx; width: Npx;"\` on the \`<img>\` tag for custom placement.
- Only use an \`<img>\` \`src\` that actually exists in the input, the kept-image list, or a \`reuse:<path>\` directive. Do not invent URLs, search for images, or use placeholder \`src\` values.
- Use \`style="object-fit: contain;"\` on logos, diagrams, or screenshots that must not be cropped. Use \`object-fit: cover;\` for full-bleed photos that should fill their area (the app CSS already defaults to \`cover\` for media-span images).
- Use KaTeX syntax for math: \`$...$\` for inline math and \`$$...$$\` for display math. The app renders these with KaTeX. Do not write ASCII art equations or use \`<sup>\`/\`<sub>\` instead of proper KaTeX.

Allowed layouts and areas:
title-slide: @title, @footer
header-content: @header, @main, @footer
two-column: @header, @main, @media, @footer
media-span-right: @header, @main, @media, @footer
media-span-left: @header, @main, @media, @footer
left-heavy: @header, @main, @media, @footer
right-heavy: @header, @main, @media, @footer
three-column: @header, @main, @media, @secondary, @footer
focus: @header, @main, @footer
full-image: @main
",
  "user": "Fix the provided SlideMD markdown. Return the result as JSON.

What to fix:

- Rejoin split code lines and add language tags where the language is clear.
- Restore blank lines between functions, classes, and logical sections.
- Remove bold wrapping from headings.
- Fix broken links, lists, and tables.
- Remove duplicate blank lines and trailing whitespace.
- Fix mismatched layouts: downgrade \`media-span-left\`, \`media-span-right\`, or \`two-column\` when there is no image or an empty second column.
- Make sure the headers for slides are correctly set and the heading level is consistent as much as possible.
- Do not add or remove slides.

Success criteria:

- Output is valid JSON with a \`slides\` array.
- Each slide has a layout and non-empty content.
- Speaker notes are preserved and placed at the end of the slide content.
- No raw \`<div style="...">\` blocks (unless it already exists); use \`::: text-block { ... }\` for custom styling. Text-block attributes use \`key=value\` syntax (not \`key: value\`); supported attributes are \`id\`, \`float\`, \`x\`, \`y\`, \`fontSize\`, \`align\`, \`opacity\`, \`z\`, \`rotate\`, \`column-count\`, \`markdown\`, \`bold\`, \`italic\`, \`underline\`, \`strikethrough\`. Do NOT use \`color\` or \`backgroundColor\` to change text or background colors. Freeform CSS (\`style\`, \`padding\`, \`margin\`) is not supported.

Input markdown:
layout: title-slide
background: #1a1a2e
theme: dark

@title

# AI for Presentations

@footer

Speaker Name
",
}
`;

exports[`composed prompt snapshots > generate (whole deck) 1`] = `
{
  "system": "You are a SlideMD editor. Improve the provided markdown and return the result as a JSON object.

Output format:

\`\`\`json
{
  "slides": [
    { "layout": "header-content", "content": "@header\\n# Title\\n\\n@main\\n- Point 1\\n- Point 2" }
  ]
}
\`\`\`

Rules:

- Return only valid JSON. No explanations, markdown fences, or surrounding text.
- Every slide must have non-empty content.
- Use \`\\n\` for newlines inside the "content" string.
- Only use @area names that the chosen layout supports. Check the layout list below before assigning areas — each layout lists its exact allowed \`@area\` names. Using an area not listed for the chosen layout is an error.
- Put a blank line before and after every @area marker.
- Put a blank line before and after code blocks, lists, tables, and headers.
- Review and fix fenced code blocks, not just their formatting. Correct syntax errors, broken logic, and nonsensical or placeholder code. Restore proper indentation and line breaks in code collapsed to a single line, remove stray inline code markers (e.g. \`\` \`43\` \`\`) that don't belong in code, and add a language tag when the language is clear.
- The first heading in \`@header\` must be \`#\` (h1), not \`##\` or lower.
- Speaker notes go at the very end: \`<!-- notes: ... -->\`.
- Use \`::: text-block { ... }\` for styled or multi-column text. Never use raw \`<div style="...">\`. Attributes MUST be inside \`{ }\` braces. Example: \`::: text-block { column-count=2 markdown=true }\\n### Heading\\n- item\\n:::\`. Blank lines inside the directive are optional.
- Text block attribute syntax: \`key=value\` or \`key="value"\` (NOT \`key: value\`). Supported attributes: \`id\`, \`float=true\`, \`x\`, \`y\`, \`fontSize\`, \`align\` (left|center|right), \`opacity\`, \`z\`, \`rotate\`, \`column-count\`, \`markdown=true\`, \`bold=true\`, \`italic=true\`, \`underline=true\`, \`strikethrough=true\`. Do NOT use \`color\` or \`backgroundColor\` to change text or background colors. Freeform CSS (\`style\`, \`padding\`, \`margin\`, \`border-radius\`) is NOT supported — use the attributes above.
- To render markdown (headings, lists, bold) inside a text-block, set \`column-count=N\` (for multi-column flow) or \`markdown=true\` (for a single styled block). Without either, content is treated as plain escaped text.
- Preserve any existing \`::: text-block\` blocks exactly, including all attributes and inner text.
- Convert \`[Diagram: ...]\` to Mermaid only for true flowcharts or hierarchies; otherwise use bullet points.
- Handle \`<img>\` tags in the input: preserve them unless the prompt says to drop specific images. When repositioning an image, use \`style="position: relative; left: Npx; top: Npx; width: Npx;"\` on the \`<img>\` tag for custom placement.
- Only use an \`<img>\` \`src\` that actually exists in the input, the kept-image list, or a \`reuse:<path>\` directive. Do not invent URLs, search for images, or use placeholder \`src\` values.
- Use \`style="object-fit: contain;"\` on logos, diagrams, or screenshots that must not be cropped. Use \`object-fit: cover;\` for full-bleed photos that should fill their area (the app CSS already defaults to \`cover\` for media-span images).
- Use KaTeX syntax for math: \`$...$\` for inline math and \`$$...$$\` for display math. The app renders these with KaTeX. Do not write ASCII art equations or use \`<sup>\`/\`<sub>\` instead of proper KaTeX.

Allowed layouts and areas:
title-slide: @title, @footer
header-content: @header, @main, @footer
two-column: @header, @main, @media, @footer
media-span-right: @header, @main, @media, @footer
media-span-left: @header, @main, @media, @footer
left-heavy: @header, @main, @media, @footer
right-heavy: @header, @main, @media, @footer
three-column: @header, @main, @media, @secondary, @footer
focus: @header, @main, @footer
full-image: @main
",
  "user": "Refine this SlideMD presentation. Return the result as JSON.

Content strategy:

- Improve wording: make headers concise, tighten bullet points, replace vague text with specific statements.
- Pick the best layout for each slide's content — don't default to header-content if a two-column, focus, or table layout would be clearer.
- Vary layouts across the deck. If three consecutive slides use the same layout, reconsider at least one. Use \`focus\` for a single key takeaway, \`two-column\` for balanced code+explanation, \`media-span-left\`/\`media-span-right\` ONLY when the \`@media\` area contains an image or Mermaid diagram, \`full-image\` for atmospheric/visual slides, and \`title-slide\` for the deck's opening slide.
- Match the layout to the content. Use \`focus\` only for a single key takeaway; \`focus\` has limited height, so use \`header-content\` or \`two-column\` for dense tables, code, and Mermaid diagrams. Use \`two-column\` only when both columns have real content. Use \`media-span-left\` or \`media-span-right\` only when the \`@media\` area is an image or a Mermaid diagram.
- If the first slide's brief says "Title slide", use \`layout: title-slide\` with the topic as \`@title\` and the identity text as \`@footer\`. Do not add body content to a title slide. Keep the footer to one or two short lines of identifying information (e.g. course code and term).
- Use tables for 2-3 item comparisons.
- Use two-column for diagrams, code, or dense content.
- Do not repeat slide titles. Every slide title must be unique and clearly distinguishable from other slides in the deck.
- Do not include internal chapter labels, step numbers, stage markers, or brief metadata in slide text. Slide titles and body text should be clean, human-facing content. Remove markers like \`chapter 03 / ...\`, \`> $ section / step N\`, \`>>> ...\`, or similar leaked brief tokens.
- Add speaker notes where helpful: \`<!-- notes: ... -->\`.
- Drop images that are low quality, redundant, or don't add value to the slide.
- If the input appears to be from a PPTX import (mismatched layouts, images in wrong areas, verbose text boxes), fix the layout to match the actual content, reposition images to where they make sense, and tighten the text.
- If a slide has a \`<!-- brief: ... -->\` comment, follow that brief. A brief saying "merge" means combine the following slides into one output slide.
- The brief may include \`| image: <query>\` at the end. Only honor the query if it is a \`reuse:<path>\` directive (e.g. \`reuse:images/team-photo.jpg\`). In that case, insert \`<img src="path">\` on that slide using the exact path. If the query is anything other than \`reuse:<path>\` (a search term, a description, etc.), ignore it — do not insert an image.
- If the brief intent text contains "Footer: <text>", place that text verbatim in the slide's \`@footer\` area (not in \`@main\`). This is used to preserve deck identity (course code, week number, etc.) on the first slide.
- Follow the mode and visual-identity instructions that follow this prompt.

Visual styling:

- Pick ONE coherent visual theme for the whole deck: a light palette with dark text, a dark palette with light text, or a high-contrast accent palette. Use it consistently across slides — do not make each slide look random.
- Use a small set of accent colors repeatedly (e.g., one primary highlight color, one secondary). Keep backgrounds within the same family and vary them subtly for rhythm.

- Use the app's default neutral styling. Do not output \`background:\`, \`theme:\`, \`style="..."\`, \`color\`, \`backgroundColor\`, or \`::: text-block { color="..." backgroundColor="..." }\`. Use bold, headings, and layout to create emphasis, not color.
- Place content images using \`<img>\` tags with appropriate \`position: relative\` + \`left\`/\`top\`/\`width\` for custom placement when the layout allows it.
- For full-bleed visuals, use \`layout: full-image\` with the image as the \`@main\` content.

Diagrams:

- Use Mermaid for ALL diagrams (flowcharts, sequence diagrams, class diagrams, etc.). Mermaid syntax: \`​\`\`\`mermaid\` code blocks.
- Do NOT use ASCII art, box-drawing characters, or text-based diagrams (e.g. \`─┐\`, \`├──>\`, \`──>\`). These render poorly and are not interactive.
- If a concept needs a visual, use Mermaid or a table instead.
- Diagrams should be substantive, not trivial. A two-box flowchart is not a diagram — it is a label. Show real relationships: multiple paths, branches, before/after states, data transformations, or layered structures. Aim for 5+ nodes in most diagrams.
- Do not draw a linear sequence of 4+ boxes connected by arrows. That is a bullet list, not a diagram. Only use a \`flowchart\` when there are branches, decisions, loops, or parallel paths. Do not use a flowchart to explain or define a concept; use a numbered list, a table, a \`classDiagram\`, or a \`stateDiagram-v2\` instead.
- Vary diagram types: use \`flowchart\` for data flow and decisions, \`sequenceDiagram\` for interactions between components, \`classDiagram\` for data models, and \`stateDiagram-v2\` for state transitions. Don't use \`flowchart LR\` for everything.
- Diagrams should illustrate the concept, not restate the title. A diagram showing \`A --> B\` with the same text as the slide title adds nothing. Show the internal structure, the decision points, or the transformation steps.

Content depth:

- Each slide should have enough content to stand on its own — not just a title and one sentence. Include concrete examples, code, comparisons, or visual structure that makes the point clear.
- Vary content structure across slides. Don't make every slide a title + code block + one-line explanation. Mix in: tables, side-by-side comparisons, annotated code, step-by-step traces, prediction questions, before/after contrasts, analogies, historical remarks, and visual metaphors.
- Code blocks should be realistic and illustrative, not trivially short. Show enough context (variables, types, output) that the reader can trace what happens. Include expected output as a separate \`text\` block when helpful.
- All code must be syntactically valid in its language and use consistent, meaningful identifiers. Do not include placeholder tokens, foreign words, or malformed syntax unless the slide explicitly labels it as a deliberate mistake and explains the fix.
- Speaker notes should add teaching value — not just restate the slide. Include suggested questions to ask the audience, common misconceptions, or transitions to the next slide.

Slide density and overflow prevention:

- One main idea per slide. If a slide's content cannot fit comfortably, split it into two slides or move the detail to speaker notes. Do not try to pack every concept onto one slide.
- Respect these per-area line budgets for the standard layouts. A "line" counts as one paragraph, one bullet item, one table row, or one line of code:
  - \`title-slide\`: \`@title\` only (one or two short lines) and \`@footer\` only (one or two short lines). No \`@main\` content.
  - \`focus\`: \`@main\` should hold at most 4–5 lines. This layout uses a larger font, so be especially stingy — a headline plus a couple of supporting lines is plenty.
  - \`header-content\`: \`@header\` is one line; \`@main\` should hold about 10–14 lines total. That budget is consumed by any combination of paragraphs, bullets, table rows, and code lines.
  - \`two-column\`: \`@header\` is one line; each column (\`@main\` and \`@media\`) should hold about 6–10 lines and be roughly balanced — neither column should be more than twice as tall as the other.
  - \`media-span-left\` / \`media-span-right\`: \`@header\` is one line; \`@main\` should hold about 8–12 lines; \`@media\` holds one image or one Mermaid diagram.
  - \`full-image\`: \`@main\` is just the full-bleed image; keep any text to a short caption (≤2 lines) or omit it.
- Dense elements consume the budget quickly: a code block, a table, or a Mermaid diagram each count as roughly their number of rendered lines. Use them singly, not stacked. If a code example is longer than ~10 lines, trim it or split it across slides.
- Speaker notes are where detail lives: common misconceptions, step-by-step narration, extra examples, and transition scripts should go in \`<!-- notes: ... -->\`, not on the slide.

Success criteria:

- Every slide has an appropriate layout with valid area markers.
- No custom \`background:\`, \`theme:\`, \`color\`, or \`backgroundColor\` directives are emitted; the deck uses the app's default neutral styling.
- Headers use the correct hierarchy.
- All \`[Diagram:]\` markers are addressed with Mermaid.
- No ASCII art or text-based diagrams.
- Each slide's content fits its layout — no area exceeds the density caps above. Split or trim overflowing slides.
- The JSON is valid and parseable.

Input markdown:
background: #1a1a2e
theme: dark

@title

# AI for Presentations

@footer

Speaker Name

---

@header

## Why SlideMD

@main

- Markdown-driven
- Offline-first
- Deterministic layout

@media

![diagram](images/chart.png)

---

@header

## Roadmap

@main

\`\`\`js
const x = 1;
console.log(x);
\`\`\`

- Ship v1.0
- Add themes
- Export PDF
",
}
`;

exports[`composed prompt snapshots > polish (whole deck) 1`] = `
{
  "system": "You are a SlideMD editor. Improve the provided markdown and return the result as a JSON object.

Output format:

\`\`\`json
{
  "slides": [
    { "layout": "header-content", "content": "@header\\n# Title\\n\\n@main\\n- Point 1\\n- Point 2" }
  ]
}
\`\`\`

Rules:

- Return only valid JSON. No explanations, markdown fences, or surrounding text.
- Every slide must have non-empty content.
- Use \`\\n\` for newlines inside the "content" string.
- Only use @area names that the chosen layout supports. Check the layout list below before assigning areas — each layout lists its exact allowed \`@area\` names. Using an area not listed for the chosen layout is an error.
- Put a blank line before and after every @area marker.
- Put a blank line before and after code blocks, lists, tables, and headers.
- Review and fix fenced code blocks, not just their formatting. Correct syntax errors, broken logic, and nonsensical or placeholder code. Restore proper indentation and line breaks in code collapsed to a single line, remove stray inline code markers (e.g. \`\` \`43\` \`\`) that don't belong in code, and add a language tag when the language is clear.
- The first heading in \`@header\` must be \`#\` (h1), not \`##\` or lower.
- Speaker notes go at the very end: \`<!-- notes: ... -->\`.
- Use \`::: text-block { ... }\` for styled or multi-column text. Never use raw \`<div style="...">\`. Attributes MUST be inside \`{ }\` braces. Example: \`::: text-block { column-count=2 markdown=true }\\n### Heading\\n- item\\n:::\`. Blank lines inside the directive are optional.
- Text block attribute syntax: \`key=value\` or \`key="value"\` (NOT \`key: value\`). Supported attributes: \`id\`, \`float=true\`, \`x\`, \`y\`, \`fontSize\`, \`align\` (left|center|right), \`opacity\`, \`z\`, \`rotate\`, \`column-count\`, \`markdown=true\`, \`bold=true\`, \`italic=true\`, \`underline=true\`, \`strikethrough=true\`. Do NOT use \`color\` or \`backgroundColor\` to change text or background colors. Freeform CSS (\`style\`, \`padding\`, \`margin\`, \`border-radius\`) is NOT supported — use the attributes above.
- To render markdown (headings, lists, bold) inside a text-block, set \`column-count=N\` (for multi-column flow) or \`markdown=true\` (for a single styled block). Without either, content is treated as plain escaped text.
- Preserve any existing \`::: text-block\` blocks exactly, including all attributes and inner text.
- Convert \`[Diagram: ...]\` to Mermaid only for true flowcharts or hierarchies; otherwise use bullet points.
- Handle \`<img>\` tags in the input: preserve them unless the prompt says to drop specific images. When repositioning an image, use \`style="position: relative; left: Npx; top: Npx; width: Npx;"\` on the \`<img>\` tag for custom placement.
- Only use an \`<img>\` \`src\` that actually exists in the input, the kept-image list, or a \`reuse:<path>\` directive. Do not invent URLs, search for images, or use placeholder \`src\` values.
- Use \`style="object-fit: contain;"\` on logos, diagrams, or screenshots that must not be cropped. Use \`object-fit: cover;\` for full-bleed photos that should fill their area (the app CSS already defaults to \`cover\` for media-span images).
- Use KaTeX syntax for math: \`$...$\` for inline math and \`$$...$$\` for display math. The app renders these with KaTeX. Do not write ASCII art equations or use \`<sup>\`/\`<sub>\` instead of proper KaTeX.

Allowed layouts and areas:
title-slide: @title, @footer
header-content: @header, @main, @footer
two-column: @header, @main, @media, @footer
media-span-right: @header, @main, @media, @footer
media-span-left: @header, @main, @media, @footer
left-heavy: @header, @main, @media, @footer
right-heavy: @header, @main, @media, @footer
three-column: @header, @main, @media, @secondary, @footer
focus: @header, @main, @footer
full-image: @main
",
  "user": "Polish this SlideMD presentation. Return the result as JSON.

What to do:

- Fix formatting, links, lists, tables, code blocks, and layout mismatches.
- Review code blocks and fix issues beyond indentation: correct syntax errors, broken logic, nonsensical code, and placeholders.
- Rejoin split code lines and add language tags where the language is clear.
- Restore blank lines between functions, classes, and logical sections.
- Remove bold wrapping from headings.
- Remove duplicate blank lines and trailing whitespace.
- Fix mismatched layouts: downgrade \`media-span-left\`, \`media-span-right\`, or \`two-column\` when there is no image or an empty second column.
- Improve wording: make headers concise, tighten bullet points, replace vague text with specific statements.
- Pick the best layout for each slide's content; use \`two-column\`, \`focus\`, or \`table\` layouts when they clarify the material.
- Use tables for 2-3 item comparisons.
- Preserve each slide's \`theme:\` and \`background:\` directives and the existing color scheme. Do not add new \`theme:\`/\`background:\` values, colored text, or \`color\`/\`backgroundColor\` attributes.
- Drop images that are low quality, redundant, or add no value, and keep the rest.
- Wrap multi-line code or complex examples in fenced code blocks with the appropriate language tag.
- If the input looks like a PPTX import (mismatched layouts, images in wrong areas, verbose text boxes), fix the layout to match the actual content, reposition images where they make sense, and tighten the text.
- Apply all of the above changes; do not return the input unchanged or leave formatting problems unfixed.

Constraints:

- Keep the same slide count and order.
- Keep the same overall narrative flow.
- Preserve existing speaker notes unless asked to add new ones.
- Preserve the existing \`theme:\`, \`background:\`, and color scheme. Do not add new \`theme:\`/\`background:\` values, colored text, or \`color\`/\`backgroundColor\` attributes.

Success criteria:

- Each slide has a layout and non-empty content.
- Headers use the correct hierarchy.
- Existing \`theme:\`, \`background:\`, and color scheme are preserved.
- The output is visibly different from the input (better formatting, wording, or layout).
- All \`[Diagram:]\` markers are addressed.
- Speaker notes are preserved and placed at the end of the slide content.

Input markdown:
background: #1a1a2e
theme: dark

@title

# AI for Presentations

@footer

Speaker Name

---

@header

## Why SlideMD

@main

- Markdown-driven
- Offline-first
- Deterministic layout

@media

![diagram](images/chart.png)

---

@header

## Roadmap

@main

\`\`\`js
const x = 1;
console.log(x);
\`\`\`

- Ship v1.0
- Add themes
- Export PDF
",
}
`;

exports[`composed prompt snapshots > reimagine outline 1`] = `
{
  "system": "You are a SlideMD editor. Improve the provided markdown and return the result as a JSON object.

Output format:

\`\`\`json
{
  "slides": [
    { "layout": "header-content", "content": "@header\\n# Title\\n\\n@main\\n- Point 1\\n- Point 2" }
  ]
}
\`\`\`

Rules:

- Return only valid JSON. No explanations, markdown fences, or surrounding text.
- Every slide must have non-empty content.
- Use \`\\n\` for newlines inside the "content" string.
- Only use @area names that the chosen layout supports. Check the layout list below before assigning areas — each layout lists its exact allowed \`@area\` names. Using an area not listed for the chosen layout is an error.
- Put a blank line before and after every @area marker.
- Put a blank line before and after code blocks, lists, tables, and headers.
- Review and fix fenced code blocks, not just their formatting. Correct syntax errors, broken logic, and nonsensical or placeholder code. Restore proper indentation and line breaks in code collapsed to a single line, remove stray inline code markers (e.g. \`\` \`43\` \`\`) that don't belong in code, and add a language tag when the language is clear.
- The first heading in \`@header\` must be \`#\` (h1), not \`##\` or lower.
- Speaker notes go at the very end: \`<!-- notes: ... -->\`.
- Use \`::: text-block { ... }\` for styled or multi-column text. Never use raw \`<div style="...">\`. Attributes MUST be inside \`{ }\` braces. Example: \`::: text-block { column-count=2 markdown=true }\\n### Heading\\n- item\\n:::\`. Blank lines inside the directive are optional.
- Text block attribute syntax: \`key=value\` or \`key="value"\` (NOT \`key: value\`). Supported attributes: \`id\`, \`float=true\`, \`x\`, \`y\`, \`fontSize\`, \`align\` (left|center|right), \`opacity\`, \`z\`, \`rotate\`, \`column-count\`, \`markdown=true\`, \`bold=true\`, \`italic=true\`, \`underline=true\`, \`strikethrough=true\`. Do NOT use \`color\` or \`backgroundColor\` to change text or background colors. Freeform CSS (\`style\`, \`padding\`, \`margin\`, \`border-radius\`) is NOT supported — use the attributes above.
- To render markdown (headings, lists, bold) inside a text-block, set \`column-count=N\` (for multi-column flow) or \`markdown=true\` (for a single styled block). Without either, content is treated as plain escaped text.
- Preserve any existing \`::: text-block\` blocks exactly, including all attributes and inner text.
- Convert \`[Diagram: ...]\` to Mermaid only for true flowcharts or hierarchies; otherwise use bullet points.
- Handle \`<img>\` tags in the input: preserve them unless the prompt says to drop specific images. When repositioning an image, use \`style="position: relative; left: Npx; top: Npx; width: Npx;"\` on the \`<img>\` tag for custom placement.
- Only use an \`<img>\` \`src\` that actually exists in the input, the kept-image list, or a \`reuse:<path>\` directive. Do not invent URLs, search for images, or use placeholder \`src\` values.
- Use \`style="object-fit: contain;"\` on logos, diagrams, or screenshots that must not be cropped. Use \`object-fit: cover;\` for full-bleed photos that should fill their area (the app CSS already defaults to \`cover\` for media-span images).
- Use KaTeX syntax for math: \`$...$\` for inline math and \`$$...$$\` for display math. The app renders these with KaTeX. Do not write ASCII art equations or use \`<sup>\`/\`<sub>\` instead of proper KaTeX.

Allowed layouts and areas:
title-slide: @title, @footer
header-content: @header, @main, @footer
two-column: @header, @main, @media, @footer
media-span-right: @header, @main, @media, @footer
media-span-left: @header, @main, @media, @footer
left-heavy: @header, @main, @media, @footer
right-heavy: @header, @main, @media, @footer
three-column: @header, @main, @media, @secondary, @footer
focus: @header, @main, @footer
full-image: @main
",
  "user": "Analyze this deck and propose a bold new direction. Return the result as JSON.

If images are provided with this request, use them to assess the visual content, quality, and style of the original deck. You may reference the visual themes in your plan, but you are free to propose a completely new visual direction.

The presentation flow is **story**. Choose storytelling techniques that fit this flow and the content — you may combine several:

- **Problem → Solution → Benefits** — open with the gap, present the approach, show the payoff.
- **Historical context arc** — trace how the topic evolved over time, then position the present moment.
- **Hook → Tension → Resolution** — grab attention, build stakes, deliver the payoff.
- **Compare → Contrast** — juxtapose alternatives, then argue for one.
- **Past → Present → Future** — where we were, where we are, where we're going.
- **Cause → Effect** — trace consequences from a root cause.
- **Layered reveal** — start simple, add complexity layer by layer.

## Visual system

Alongside the narrative outline, design a **visual system** — a deck-wide design language that defines the visual identity of the presentation. This is not a slide-by-slide progression. Do not design a linear "slide 1 dark, slide 2 slightly lighter" ramp. Instead, define a **grammar** with:

- A palette of 5 colors with distinct roles (base, surface, accent, contrast, highlight).
- Typography character (the personality of the type), headline style, and body style.
- Composition preferences: density, whitespace, alignment.
- Imagery: what role images play, their mood, and how they should be treated.
- Recurring motifs (visual elements that create cohesion across slides).
- Contrast rules (when and how to deliberately break the visual pattern for emphasis).

The visual system is a **design language**, not a progression. The same deck may have a dark slide right after a light slide because the content demands contrast, not because the deck is "progressing" from dark to light.

Output format:

\`\`\`json
{
  "plan": "1-3 sentence statement of the deck's core message, the fresh editorial angle, and the narrative structure you chose (e.g. 'Reframe the deck around outcomes. Open with historical context, build tension around the current gap, present the approach with evidence, close with a call to action.').",
  "visualSystem": {
    "palette": {
      "base": "#0f172a",
      "surface": "#1e293b",
      "accent": "#06b6d4",
      "contrast": "#f59e0b",
      "highlight": "#ffffff"
    },
    "typography": {
      "character": "bold editorial",
      "headline": "large, compact, high contrast",
      "body": "clean, restrained"
    },
    "composition": {
      "density": "medium",
      "whitespace": "generous",
      "alignment": "left-dominant"
    },
    "imagery": {
      "role": "emotional punctuation and chapter transitions",
      "mood": "moody, atmospheric",
      "treatment": "full-bleed, minimal overlays"
    },
    "motifs": [
      "thin accent divider lines between chapters",
      "oversized chapter numbers in accent color"
    ],
    "contrastRules": [
      "Use stark white slides for major takeaways",
      "Avoid more than 3 consecutive visually identical slides"
    ]
  },
  "keepImages": [0, 2],
  "firstSlideIdentity": "COMP 1510 202630",
  "chapters": [
    {
      "title": "Where we were",
      "flowTag": "context",
      "summary": "Historical context for the topic. Explain how the field started, what assumptions dominated early approaches, and why those assumptions made sense at the time. This sets the baseline so the audience can appreciate how far things have come.",
      "suggestedSlideCount": 3
    },
    {
      "title": "The gap",
      "flowTag": "problem",
      "summary": "What current approaches miss. Identify the core limitation, explain why it matters now, and hint at the cost of inaction. Build tension before the solution is revealed.",
      "suggestedSlideCount": 2
    }
  ]
}
\`\`\`

Rules:

- Return only valid JSON. No explanations, markdown fences, or surrounding text.
- \`plan\` — 1-3 sentences combining: the deck's core message, the fresh angle you propose, and the narrative structure you chose with a brief justification.
- \`visualSystem\` — the deck-wide visual design language:
  - \`palette\` — 5 hex colors (\`#rrggbb\`):
    - \`base\` — primary background color.
    - \`surface\` — secondary background (cards, panels, slightly elevated from base).
    - \`accent\` — the main highlight color for emphasis and interactive elements.
    - \`contrast\` — a secondary accent for deliberate visual contrast.
    - \`highlight\` — the lightest color (often white or near-white) for inversion/punctuation slides.
  - \`typography\` — \`character\` (1-3 word personality description), \`headline\` (style description), \`body\` (style description).
  - \`composition\` — \`density\` (\`compact\` | \`medium\` | \`spacious\`), \`whitespace\` (\`restrained\` | \`generous\` | \`expansive\`), \`alignment\` (\`left-dominant\` | \`centered\` | \`asymmetric\`).
  - \`imagery\` — \`role\` (what purpose images serve), \`mood\` (emotional tone), \`treatment\` (how images are presented).
  - \`motifs\` — 1-3 recurring visual elements that create cohesion.
  - \`contrastRules\` — 1-3 rules for when and how to break the visual pattern.
  - Do NOT design a linear progression (e.g. "slide 1 dark, slide 2 lighter..."). Design a system with rules, motifs, and deliberate contrast.
- \`keepImages\` — optional array of 0-based indices into the sent image list (images are numbered sequentially across all slides, starting from 0). Include only images worth carrying over to the new deck — logos, team photos, product screenshots, diagrams, or other irreplaceable visuals. Omit generic stock photos, decorative backgrounds, or images that won't fit the new narrative. If no images were sent or none are worth keeping, omit this field or return an empty array.
- \`firstSlideIdentity\` — a short string (1-2 lines) extracted EXCLUSIVELY from the "First slide (preserve its identifying info)" text provided above. Do NOT look at other slides for this. Extract the identifying text from the first slide's footer, header, or title (e.g. course code + term, event name, author). Keep it concise: do not include the full institutional description or repeated course names. If the first slide has no identifying information beyond the title heading, use the title itself. Do NOT mention this field or the footer in the plan text — just extract the value into this field.
- \`chapters\` — 3-7 chapters that group the narrative into a clear arc. Each chapter has:
  - \`title\` — short chapter title.
  - \`flowTag\` — one of: \`hook\`, \`context\`, \`problem\`, \`tension\`, \`solution\`, \`evidence\`, \`comparison\`, \`example\`, \`transition\`, \`climax\`, \`cta\`.
  - \`summary\` — 2-4 sentences describing what the chapter covers, the key points it should make, and how it connects to the chapters before and after it. This is the primary input to slide generation, so be specific about the content and direction.
  - \`suggestedSlideCount\` — integer: how many slides this chapter should contain. Aim for the total across all chapters to be within 2-4 (70-120% of the original 3 slides). Do not collapse the deck drastically — if the original is large, keep enough slides to cover the material.
- The first chapter should open with a title slide. The first chapter's first slide should be a proper title slide — not a content slide. It should display the deck's topic title and the \`firstSlideIdentity\` text (course code, term, etc.) in the footer. The second slide should be an agenda/outline slide that lists the chapter titles as a roadmap for the audience. Only after these two slides should the content begin.
- Take a bold editorial approach. You may rethink the topic, examples, notes, and visuals. Preserve the user's core intent and factual accuracy, but do not preserve the original structure, topics, examples, or speaker notes merely for the sake of the original.
- Do not preserve the original theme, colors, backgrounds, or visual language. You may propose a new visual direction.
- Preserve the identity of the first slide. Extract the identifying information (course code, week number, author, event name) from the original first slide into the \`firstSlideIdentity\` field. The first chapter's first slide should display this concise identity text verbatim in its footer, even as the surrounding design and narrative change.
- Be creative with the narrative angle. Don't just reorganize the same content — find a fresh hook, a surprising metaphor, a compelling character arc, or a concrete analogy that makes the material feel new. Include historical remarks, real-world examples, and accessible comparisons where they help learners understand abstract concepts. The deck should feel like it was crafted by an editor, not auto-generated.

Success criteria:

- The plan captures the deck's core message, the fresh angle, and the chosen narrative structure.
- The visual system defines a cohesive design language with a palette, typography, composition, imagery, motifs, and contrast rules — not a linear progression.
- The chapters form a clear narrative arc from opening to close.
- The total suggested slide count is within 2-4 (3 source slides).
- Each chapter summary is specific enough to guide slide generation without the user needing to see individual slides.
- The JSON is valid and parseable.

Input deck summary and outline:
Deck: 3 slides.
Outline:
1. [title-slide] AI for Presentations
",
}
`;

exports[`composed prompt snapshots > remix plan (text-only) 1`] = `
{
  "system": "You are a SlideMD editor. Improve the provided markdown and return the result as a JSON object.

Output format:

\`\`\`json
{
  "slides": [
    { "layout": "header-content", "content": "@header\\n# Title\\n\\n@main\\n- Point 1\\n- Point 2" }
  ]
}
\`\`\`

Rules:

- Return only valid JSON. No explanations, markdown fences, or surrounding text.
- Every slide must have non-empty content.
- Use \`\\n\` for newlines inside the "content" string.
- Only use @area names that the chosen layout supports. Check the layout list below before assigning areas — each layout lists its exact allowed \`@area\` names. Using an area not listed for the chosen layout is an error.
- Put a blank line before and after every @area marker.
- Put a blank line before and after code blocks, lists, tables, and headers.
- Review and fix fenced code blocks, not just their formatting. Correct syntax errors, broken logic, and nonsensical or placeholder code. Restore proper indentation and line breaks in code collapsed to a single line, remove stray inline code markers (e.g. \`\` \`43\` \`\`) that don't belong in code, and add a language tag when the language is clear.
- The first heading in \`@header\` must be \`#\` (h1), not \`##\` or lower.
- Speaker notes go at the very end: \`<!-- notes: ... -->\`.
- Use \`::: text-block { ... }\` for styled or multi-column text. Never use raw \`<div style="...">\`. Attributes MUST be inside \`{ }\` braces. Example: \`::: text-block { column-count=2 markdown=true }\\n### Heading\\n- item\\n:::\`. Blank lines inside the directive are optional.
- Text block attribute syntax: \`key=value\` or \`key="value"\` (NOT \`key: value\`). Supported attributes: \`id\`, \`float=true\`, \`x\`, \`y\`, \`fontSize\`, \`align\` (left|center|right), \`opacity\`, \`z\`, \`rotate\`, \`column-count\`, \`markdown=true\`, \`bold=true\`, \`italic=true\`, \`underline=true\`, \`strikethrough=true\`. Do NOT use \`color\` or \`backgroundColor\` to change text or background colors. Freeform CSS (\`style\`, \`padding\`, \`margin\`, \`border-radius\`) is NOT supported — use the attributes above.
- To render markdown (headings, lists, bold) inside a text-block, set \`column-count=N\` (for multi-column flow) or \`markdown=true\` (for a single styled block). Without either, content is treated as plain escaped text.
- Preserve any existing \`::: text-block\` blocks exactly, including all attributes and inner text.
- Convert \`[Diagram: ...]\` to Mermaid only for true flowcharts or hierarchies; otherwise use bullet points.
- Handle \`<img>\` tags in the input: preserve them unless the prompt says to drop specific images. When repositioning an image, use \`style="position: relative; left: Npx; top: Npx; width: Npx;"\` on the \`<img>\` tag for custom placement.
- Only use an \`<img>\` \`src\` that actually exists in the input, the kept-image list, or a \`reuse:<path>\` directive. Do not invent URLs, search for images, or use placeholder \`src\` values.
- Use \`style="object-fit: contain;"\` on logos, diagrams, or screenshots that must not be cropped. Use \`object-fit: cover;\` for full-bleed photos that should fill their area (the app CSS already defaults to \`cover\` for media-span images).
- Use KaTeX syntax for math: \`$...$\` for inline math and \`$$...$$\` for display math. The app renders these with KaTeX. Do not write ASCII art equations or use \`<sup>\`/\`<sub>\` instead of proper KaTeX.

Allowed layouts and areas:
title-slide: @title, @footer
header-content: @header, @main, @footer
two-column: @header, @main, @media, @footer
media-span-right: @header, @main, @media, @footer
media-span-left: @header, @main, @media, @footer
left-heavy: @header, @main, @media, @footer
right-heavy: @header, @main, @media, @footer
three-column: @header, @main, @media, @secondary, @footer
focus: @header, @main, @footer
full-image: @main
",
  "user": "Analyze this deck and produce a restructuring plan. Return the result as JSON.

Output format:

\`\`\`json
{
  "plan": [
    {
      "action": "keep",
      "source": [0],
      "brief": "",
      "title": "Introduction"
    },
    {
      "action": "rewrite",
      "source": [2],
      "brief": "Make this slide more concise and use a two-column layout",
      "title": "Roadmap",
      "keepImages": [0]
    },
    {
      "action": "merge",
      "source": [3, 4],
      "brief": "Combine these two thin slides into a single comparison slide",
      "title": "Comparison",
      "keepImages": [0, 1]
    }
  ]
}
\`\`\`

Rules:

- Return only valid JSON. No explanations, markdown fences, or surrounding text.
- \`action\` must be one of: \`keep\`, \`rewrite\`, \`merge\`.
  - \`keep\` — the slide is already good; copy it as-is. \`brief\` should be empty.
  - \`rewrite\` — rework one slide's content. \`source\` must have exactly 1 index.
  - \`merge\` — combine multiple slides into one. \`source\` must have 2 or more indices.
- \`source\` indices are 0-based into the original deck. The deck has 3 source slides, so valid source indices are 0 through 2 inclusive. The outline above is numbered from 1 for readability, but the index for the first source slide is 0 and the last source slide is 2.
- \`brief\` is a one-sentence description of what the output slide should contain. Required for \`rewrite\` and \`merge\`; empty for \`keep\`.
- \`title\` is a short label for the slide (used for display, not sent to the generator).
- \`keepImages\` is only meaningful when you were sent slide images (see "When images are provided" below). If you were not sent any images, omit \`keepImages\` entirely — do not guess it.
- Cover every source slide. Reorder freely if a different order tells the story better.
- Use \`keep\` for slides that are already clear, well-structured, and in the right place.
- Use \`rewrite\` when the topic is right but the content or layout could be improved.
- Use \`merge\` sparingly — only when adjacent slides are genuinely thin, overlapping, or redundant and combining them clearly improves the deck. Do not merge slides with distinct topics, key takeaways, or strong standalone value. When in doubt, prefer \`keep\` or \`rewrite\`.

Preserve the deck's core message and important source material. Reorganize where it improves clarity, pacing, or narrative flow. Use merge thoughtfully and keep slides that are already effective.

Preserve the original slide order, layouts, and content, but strip out the original color theme, colored text, backgrounds, and \`theme:\`/\`background:\` directives. Do not introduce new colors or custom text colors. The app provides its own neutral color scheme.

No images were sent with this request — omit \`keepImages\` from every plan entry.

Success criteria:

- The plan covers every original slide (every source index appears in at least one entry).
- The JSON is valid and parseable.
- No source index is out of range.
- Each output slide has a clear purpose.

Input deck summary and outline:
Deck: 3 slides.
Outline:
1. [title-slide] AI for Presentations
",
}
`;
